--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="port">
     <nav>
-       <img src="./logo.png">
+       <img src="./images/logo.png">
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
@@ -20,10 +20,11 @@
     </nav>
     <div class="Details">
         <h1>I'm John <span>Gitau</span></h1>
-        <p>This is my Official portfolio page
-        <br>I'm a Software Engineer based in Kenya</br></p>
+        <p>I'm a Software Engineer based in Kenya
+        <br>This is my official portfolio page</br></p>
         <p><a href="#">DOWNLOAD CV</a></p>
     </div>
+    
 </div>
     
 </body>
